--- a/Sass_pro/scss/practica.scss
+++ b/Sass_pro/scss/practica.scss
@@ -6,10 +6,6 @@
 @import "_secciones";
 @import "_ant-foot";
 @import "_footer";
-@import "_mediaaQ700_501";
-@import "_mediaaQ700_500";
-@import "_mediaQ400";
-@import "destino";
 @import "productos";
 @import "colores";
 @import "title-menuflort";
@@ -25,3 +21,4 @@
 @import "muestraDeDatos";
 @import "_carrito";
 @import "_modalCarrito";
+@import "querysIndex";
