--- a/Sass_pro/scss/body.scss
+++ b/Sass_pro/scss/body.scss
@@ -13,6 +13,7 @@ a {
 }
 
 .body__practica {
+  overflow: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
@@ -31,4 +32,5 @@ a {
 /*# sourceMappingURL=body.css.map */
 .contain_title_ofert {
   grid-area: contain_title_ofert;
+  overflow-x: hidden;
 }
