--- a/Sass_pro/scss/_cont-publicidad.scss
+++ b/Sass_pro/scss/_cont-publicidad.scss
@@ -1,5 +1,19 @@
+.containPrincipal {
+  display: grid;
+  grid-template-rows: 100%, 100%;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+.carrusel_izquierdo {
+  position: absolute;
+  display: none;
+}
+.carrusel_izquierdo {
+  display: block;
+}
 .cont-publicidad-1 {
-  grid-area: cont-publicidad-1;
   background: url(../../imagenes-proyecto/imgpubli-1.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -52,7 +66,6 @@
 }
 
 .cont-publicidad-2 {
-  grid-area: cont-publicidad-2;
   background: url(../../imagenes-proyecto/image0000431-79da39a9ba220ab08516316458720084-1024-1024.jpeg);
   background-position-x: center;
   background-repeat: no-repeat;
@@ -62,7 +75,6 @@
 }
 
 .cont-publicidad-3 {
-  grid-area: cont-publicidad-3;
   background: url(../../imagenes-proyecto/img-punli-gorrojpeg.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -72,7 +84,6 @@
 }
 
 .cont-publicidad-4 {
-  grid-area: cont-publicidad-4;
   background: url(../../imagenes-proyecto/carterita.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
