--- a/Sass_pro/scss/body.css
+++ b/Sass_pro/scss/body.css
@@ -13,15 +13,21 @@ a {
 }
 
 .body__practica {
-  overflow: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
-  grid-template-rows: 45% 12% 40% 40% 50% 22% 32%;
-      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "cont-publicidad-1    cont-publicidad-2" "cont-publicidad-4    cont-publicidad-3" "secciones secciones" "ant-foot ant-foot" "footer footer";
+  grid-template-rows: 45% 12% 80% 50% 22% 32%;
+      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
 }
+.containPrincipal {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: containPrincipal;
+}
+
 .contain_title_ofert {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
