--- a/Sass_pro/scss/body.scss
+++ b/Sass_pro/scss/body.scss
@@ -13,23 +13,24 @@ a {
 }
 
 .body__practica {
-  overflow: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
-  grid-template-rows: 45% 12% 40% 40% 50% 22% 32%;
+  grid-template-rows: 45% 12% 80% 50% 22% 32%;
   grid-template-areas:
     "portada portada-2"
     "contain_title_ofert  contain_title_ofert"
-    "cont-publicidad-1    cont-publicidad-2"
-    "cont-publicidad-4    cont-publicidad-3"
+    "containPrincipal  containPrincipal"
     "secciones secciones"
     "ant-foot ant-foot"
     "footer footer";
 }
 /*# sourceMappingURL=body.css.map */
+.containPrincipal {
+  grid-area: containPrincipal;
+}
 .contain_title_ofert {
   grid-area: contain_title_ofert;
   overflow-x: hidden;
