--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -134,15 +134,21 @@ a {
 }
 
 .body__practica {
-  overflow: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
-  grid-template-rows: 45% 12% 40% 40% 50% 22% 32%;
-      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "cont-publicidad-1    cont-publicidad-2" "cont-publicidad-4    cont-publicidad-3" "secciones secciones" "ant-foot ant-foot" "footer footer";
+  grid-template-rows: 45% 12% 80% 50% 22% 32%;
+      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
 }
+.containPrincipal {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: containPrincipal;
+}
+
 .contain_title_ofert {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
@@ -316,10 +322,27 @@ a {
   font-family: "Mulish", sans-serif;
 }
 
+.containPrincipal {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 100%, 100%;
+      grid-template-rows: 100%, 100%;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+.carrusel_izquierdo {
+  position: absolute;
+  display: none;
+}
+
+.carrusel_izquierdo {
+  display: block;
+}
+
 .cont-publicidad-1 {
-  -ms-grid-row: 3;
-  -ms-grid-column: 1;
-  grid-area: cont-publicidad-1;
   background: url(../../imagenes-proyecto/imgpubli-1.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -390,9 +413,6 @@ a {
 }
 
 .cont-publicidad-2 {
-  -ms-grid-row: 3;
-  -ms-grid-column: 2;
-  grid-area: cont-publicidad-2;
   background: url(../../imagenes-proyecto/image0000431-79da39a9ba220ab08516316458720084-1024-1024.jpeg);
   background-position-x: center;
   background-repeat: no-repeat;
@@ -408,9 +428,6 @@ a {
 }
 
 .cont-publicidad-3 {
-  -ms-grid-row: 4;
-  -ms-grid-column: 2;
-  grid-area: cont-publicidad-3;
   background: url(../../imagenes-proyecto/img-punli-gorrojpeg.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -426,9 +443,6 @@ a {
 }
 
 .cont-publicidad-4 {
-  -ms-grid-row: 4;
-  -ms-grid-column: 1;
-  grid-area: cont-publicidad-4;
   background: url(../../imagenes-proyecto/carterita.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
@@ -446,7 +460,7 @@ a {
 .secciones {
   display: -ms-grid;
   display: grid;
-  -ms-grid-row: 5;
+  -ms-grid-row: 4;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: secciones;
@@ -511,7 +525,7 @@ a {
 }
 
 .ant-foot {
-  -ms-grid-row: 6;
+  -ms-grid-row: 5;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: ant-foot;
@@ -2734,6 +2748,7 @@ th {
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .menu {
     overflow: hidden;
+    width: 100%;
     display: block;
   }
   .cont-enla ul li a > span {
@@ -2778,18 +2793,45 @@ th {
   .fa-shopping-bag {
     font-size: 3vh;
   }
+  .contain_title_ofert {
+    font-size: 1vh;
+  }
   .body__practica {
+    overflow-x: hidden;
+    overflow-y: auto;
     display: -ms-grid;
     display: grid;
     overflow-x: hidden;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    overflow-x: scroll;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
-    grid-template-rows: 35% 35% 12% 40% 40% 50% 22% 32%;
-        grid-template-areas: "portada portada" "portada-2 portada-2" "contain_title_ofert  contain_title_ofert" "cont-publicidad-1    cont-publicidad-2" "cont-publicidad-4    cont-publicidad-3" "secciones secciones" "ant-foot ant-foot" "footer footer";
+    grid-template-rows: 25% 25% 7% 16% 30% 13% 10%;
+        grid-template-areas: "portada portada" "portada-2 portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
+  }
+  .span_publi {
+    display: none;
+  }
+  .containPrincipal {
+    border: medium solid red;
+    overflow: hidden;
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: containPrincipal;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
   .portada {
-    overflow-x: hidden;
     background-position: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -2818,7 +2860,40 @@ th {
     font-size: 3.5vh;
     font-family: "Mulish", sans-serif;
   }
+  .portada-2 {
+    background-position: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .des-port {
+    margin-bottom: 0;
+    width: 43vh;
+    text-align: center;
+    margin-left: 0%;
+    font-family: "Mulish", sans-serif;
+  }
+  .bu-prin-1 {
+    text-decoration: none;
+    color: #fff;
+    padding-top: 0;
+    margin: 0%;
+    padding: 0%;
+    left: 0%;
+    right: 0;
+    text-align: center;
+    position: relative;
+    font-size: 3.5vh;
+    font-family: "Mulish", sans-serif;
+  }
+  .des-port-2 {
     margin-bottom: 0;
     width: 43vh;
     text-align: center;
