--- a/Sass_pro/scss/querysIndex.css
+++ b/Sass_pro/scss/querysIndex.css
@@ -12,6 +12,7 @@
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .menu {
     overflow: hidden;
+    width: 100%;
     display: block;
   }
   .cont-enla ul li a > span {
@@ -56,18 +57,45 @@
   .fa-shopping-bag {
     font-size: 3vh;
   }
+  .contain_title_ofert {
+    font-size: 1vh;
+  }
   .body__practica {
+    overflow-x: hidden;
+    overflow-y: auto;
     display: -ms-grid;
     display: grid;
     overflow-x: hidden;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    overflow-x: scroll;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
-    grid-template-rows: 35% 35% 12% 40% 40% 50% 22% 32%;
-        grid-template-areas: "portada portada" "portada-2 portada-2" "contain_title_ofert  contain_title_ofert" "cont-publicidad-1    cont-publicidad-2" "cont-publicidad-4    cont-publicidad-3" "secciones secciones" "ant-foot ant-foot" "footer footer";
+    grid-template-rows: 25% 25% 7% 16% 30% 13% 10%;
+        grid-template-areas: "portada portada" "portada-2 portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
+  }
+  .span_publi {
+    display: none;
+  }
+  .containPrincipal {
+    border: medium solid red;
+    overflow: hidden;
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: containPrincipal;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
   .portada {
-    overflow-x: hidden;
     background-position: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -96,7 +124,40 @@
     font-size: 3.5vh;
     font-family: "Mulish", sans-serif;
   }
+  .portada-2 {
+    background-position: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .des-port {
+    margin-bottom: 0;
+    width: 43vh;
+    text-align: center;
+    margin-left: 0%;
+    font-family: "Mulish", sans-serif;
+  }
+  .bu-prin-1 {
+    text-decoration: none;
+    color: #fff;
+    padding-top: 0;
+    margin: 0%;
+    padding: 0%;
+    left: 0%;
+    right: 0;
+    text-align: center;
+    position: relative;
+    font-size: 3.5vh;
+    font-family: "Mulish", sans-serif;
+  }
+  .des-port-2 {
     margin-bottom: 0;
     width: 43vh;
     text-align: center;
