--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -2900,9 +2900,20 @@ th {
     margin-left: 0%;
     font-family: "Mulish", sans-serif;
   }
-  .carrusel_adelante {
-    -webkit-transform: translate(0, 750%);
-            transform: translate(0, 750%);
+  .containPrincipal {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  .imgPubli {
+    -o-object-fit: contain;
+       object-fit: contain;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .carrusel_atras {
+    -webkit-transform: translate(0%, 1000%);
+            transform: translate(0%, 1000%);
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
@@ -2910,15 +2921,17 @@ th {
     width: -moz-fit-content;
     width: fit-content;
     background: transparent;
-    border: none;
+    position: absolute;
+    border: 1px solid red;
   }
-  .carrusel_atras {
-    -webkit-transform: translate(1300%, 750%);
-            transform: translate(1300%, 750%);
+  .carrusel_adelante {
+    -webkit-transform: translate(1640%, 1150%);
+            transform: translate(1640%, 1150%);
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
     background: transparent;
+    position: absolute;
     border: none;
     width: -webkit-fit-content;
     width: -moz-fit-content;
