--- a/Sass_pro/scss/querysIndex.scss
+++ b/Sass_pro/scss/querysIndex.scss
@@ -76,8 +76,8 @@
     overflow-x: scroll;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
-    grid-template-rows: 25% 25% 7% 16% 30% 13% 10%;
+    -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 70vh;
+    grid-template-rows: 25% 25% 3% 13% 45% 10% 18%;
     grid-template-areas:
       "portada portada"
       "portada-2 portada-2"
@@ -90,23 +90,14 @@
   .span_publi {
     display: none;
   }
-  .containPrincipal {
-    border: medium solid red;
-    overflow: hidden;
-    grid-area: containPrincipal;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-  }
+
   .portada {
     background-position: center;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  .contain_ppt {
-    border: 1px solid red;
-  }
+
   .bu-prin {
     text-decoration: none;
     color: #fff;
@@ -155,30 +146,110 @@
     font-family: "Mulish", sans-serif;
   }
   .containPrincipal {
+    overflow: hidden;
+    grid-area: containPrincipal;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     width: 100%;
-    height: 100%;
-    position: relative;
+    text-align: center;
+    background-color: whitesmoke;
+    height: 70vh;
+  }
+  .bt_carrusel_atras {
+    background: red;
+    float: left;
   }
   .imgPubli {
     object-fit: contain;
     margin-left: auto;
     margin-right: auto;
   }
+  .btCarrusel {
+    background: transparent;
+    border: none;
+  }
   .carrusel_atras {
-    transform: translate(0%, 1000%);
-    height: fit-content;
-    width: fit-content;
+    transform: translateY(-200%);
     background: transparent;
     position: absolute;
-    border: 1px solid red;
+
+    border: none;
   }
   .carrusel_adelante {
-    transform: translate(1640%, 1150%);
-    height: fit-content;
+    background: transparent;
+  }
+  .carrusel_atras p {
+    font-size: 3vh;
+    background: transparent;
+  }
+  .carrusel_adelante {
+    transform: translate(3150%, -200%);
     background: transparent;
     position: absolute;
     border: none;
     width: fit-content;
+  }
+  .bu-publicidad {
+    position: absolute;
+    transform: translate(50%, 700%);
+  }
+  .secciones {
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .container-foot {
+    margin-top: 15%;
+  }
+  .img-secciones {
+    margin-top: 8%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .img-sec {
+    position: relative;
+    border-radius: 4.9vh;
+  }
+
+  .img-sec {
+    position: relative;
+    width: 90%;
+    border-radius: 4.9vh;
+  }
+  .title-ant {
+    font-size: 115%;
+  }
+  .text-ant {
+    font-size: 115%;
+    text-align: center;
+  }
+  .inp-email {
+    margin-top: 6vh;
+    height: 105%;
+    font-size: 3;
+    width: 160%;
+  }
+  //FOOTER------------------------------------
+  .elem-list a {
+    font-size: 112%;
+    color: #000;
+  }
+
+  .derechos-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .dere {
+    font-size: 112%;
+    margin-bottom: 10px;
+  }
+  .url-hijo .url-hijo_2 {
+    font-size: 90%;
   }
 }
 
