--- a/Sass_pro/scss/querysIndex.scss
+++ b/Sass_pro/scss/querysIndex.scss
@@ -248,7 +248,13 @@
     font-size: 112%;
     margin-bottom: 10px;
   }
-  .url-hijo .url-hijo_2 {
+  .url-hijo {
+    font-size: 90%;
+  }
+  .url-hijo_2 {
+    font-size: 90%;
+  }
+  .link-hij {
     font-size: 90%;
   }
 }
