--- a/Sass_pro/scss/querysIndex.scss
+++ b/Sass_pro/scss/querysIndex.scss
@@ -97,7 +97,12 @@
     align-items: center;
     justify-content: center;
   }
-
+  .bu-principal {
+    margin-left: 0;
+  }
+  .bu-principal-1 {
+    margin-left: 0;
+  }
   .bu-prin {
     text-decoration: none;
     color: #fff;
