--- a/Sass_pro/scss/querysIndex.css
+++ b/Sass_pro/scss/querysIndex.css
@@ -91,6 +91,12 @@
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .bu-principal {
+    margin-left: 0;
+  }
+  .bu-principal-1 {
+    margin-left: 0;
+  }
   .bu-prin {
     text-decoration: none;
     color: #fff;
