--- a/Sass_pro/scss/querysIndex.scss
+++ b/Sass_pro/scss/querysIndex.scss
@@ -42,11 +42,68 @@
     height: fit-content;
     width: 100%;
   }
-  .menuHamLi {
+  .container_hambur {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .panel_btn {
+    position: fixed;
+    z-index: 999;
+    bottom: 1vh;
+    right: 1vh;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+  }
+  .panel_hambur {
+    position: fixed;
+    z-index: 998;
+    background: rgb(163, 150, 150);
+    opacity: 0.5;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    transition: transform 0.3s ease;
+    transform: translate(0, -100);
+  }
+  .panel_hambur.panelActive {
+    transform: translate(0, 0);
+  }
+  .ul_hambur {
+    width: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    list-style: none;
+  }
+  .ul_hambur a {
+    width: 100%;
+    padding: 10%;
     display: block;
+    font-size: 2vh;
+    text-decoration: none;
+    transition: all 0.3s ease;
+  }
+  .ul_hambur li :hover {
+    font-weight: bold;
+    color: rgb(138, 110, 110);
+    background-color: darkblue;
+  }
+  .off {
+    display: none;
   }
   .cont-enla ul {
     display: flex;
+    overflow: hidden;
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-around;
