--- a/Sass_pro/scss/querysIndex.scss
+++ b/Sass_pro/scss/querysIndex.scss
@@ -1,10 +1,10 @@
 /* Large desktop */
+
 @media (max-width: 1200px) {
   // .cont-enla ul li a > span {
   //   display: none;
   // }
 }
-
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
   // .body__practica {
@@ -48,9 +48,22 @@
     align-items: center;
     justify-content: space-around;
   }
+  .menuHamCon {
+    background-color: white;
+    top: 0;
+    z-index: 1000;
+    position: fixed;
+    width: 100%;
+    text-align: end;
+  }
+  .btnCarr_ham {
+    border: none;
+    background: none;
+    padding: 2%;
+  }
   .panel_btn {
     position: fixed;
-    z-index: 999;
+    z-index: 2005;
     bottom: 1vh;
     right: 1vh;
     width: 4rem;
@@ -65,13 +78,13 @@
   .panel_hambur {
     position: fixed;
     z-index: 998;
-    background: rgb(163, 150, 150);
-    opacity: 0.5;
+    background: white;
     width: 100%;
     top: 0;
     bottom: 0;
     transition: transform 0.3s ease;
-    transform: translate(0, -100);
+    color: black;
+    transform: translate(100%, 0);
   }
   .panel_hambur.panelActive {
     transform: translate(0, 0);
@@ -81,25 +94,61 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
+    align-items: flex-end;
+    text-align: start;
     list-style: none;
   }
-  .ul_hambur a {
+  .ul_hambur li {
     width: 100%;
-    padding: 10%;
+    padding: 7%;
     display: block;
-    font-size: 2vh;
     text-decoration: none;
     transition: all 0.3s ease;
   }
+
   .ul_hambur li :hover {
     font-weight: bold;
     color: rgb(138, 110, 110);
     background-color: darkblue;
   }
+  .ul_hambur li a {
+    text-decoration: none;
+    color: black;
+    font-size: 130%;
+    font-family: "Mulish", sans-serif;
+  }
+  .ul_hambur_fas {
+    width: inherit;
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid black;
+    text-align: start;
+    list-style: none;
+  }
+  .title_Hamburg {
+    padding: 5%;
+    font-size: 160%;
+    font-family: "Mulish", sans-serif;
+  }
+  .ul_hambur_fas li {
+    width: 100%;
+    padding: 7%;
+    display: block;
+    text-decoration: none;
+    background-color: rgb(212, 203, 203);
+    transition: all 0.3s ease;
+  }
+  .a_ul_fas {
+    text-decoration: none;
+    color: black;
+    font-size: 130%;
+    font-family: "Mulish", sans-serif;
+  }
   .off {
     display: none;
+  }
+  .ul_hambur_fas li {
+    list-style: none;
   }
   .cont-enla ul {
     display: flex;
