--- a/Sass_pro/scss/practica.css
+++ b/Sass_pro/scss/practica.css
@@ -143,7 +143,7 @@ a {
   grid-template-columns: 1fr 1fr;
   -ms-grid-rows: 115vh 135vh 90vh 90vh 120vh 50vh 80vh;
   grid-template-rows: 45% 12% 80% 50% 22% 32%;
-      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
+      grid-template-areas: "portada portada-2" "contain_title_ofert  contain_title_ofert" "containPrincipal  containPrincipal" "secciones secciones" "ant-foot ant-foot" "footer footer";
 }
 .containPrincipal {
   -ms-grid-row: 3;
@@ -3173,4 +3173,161 @@ th {
 /* Desktops and laptops ----------- */
 /* Large screens ----------- */
 /* iPhone 4 and high pixel ratio devices ----------- */
+@media only screen and (max-device-width: 480px) {
+  .body_product {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 5% 90% 23%;
+        grid-template-rows: 5% 90% 23%;
+        grid-template-areas: "presentacion_productos  presentacion_productos" "img__product   img__product" "footer  footer";
+  }
+  .inside_h1 {
+    text-align: center;
+    font-size: 4vh;
+    color: var(--rosa-titles);
+  }
+  .title__img_cont {
+    width: 100%;
+    grid-area: title__img_cont;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-top: 20%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .opciones_de_productos {
+    width: 100%;
+    display: none;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    background: #fff;
+    position: relative;
+  }
+  .opciones_de_productos.opcion_cambio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+    z-index: 5;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    background: #fff;
+    position: relative;
+  }
+  .button_opciones {
+    padding-left: 7vh;
+    padding-right: 2vh;
+    font-family: "Mulish", sans-serif;
+    border: none;
+    font-size: 3.5vh;
+    color: var(--letra-negra);
+  }
+  .menu_opciones {
+    width: 95%;
+    height: 50%;
+  }
+  .container_opciones_menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    list-style: none;
+    border-top: none;
+  }
+  .categorias_opciones {
+    width: 40%;
+    padding-right: 20vh;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding-top: 7vh;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    font-size: 5vh;
+  }
+  .talle_opciones {
+    width: 20%;
+    list-style: none;
+    font-family: "Mulish", sans-serif;
+    line-height: 5vh;
+  }
+  .color_opciones {
+    width: 10%;
+    list-style: none;
+    line-height: 7vh;
+  }
+  .color_opciones-1 {
+    margin-top: 6.4vh;
+    width: 20%;
+    list-style: none;
+    line-height: 7vh;
+  }
+  .list_opciones {
+    font-size: 2.4vh;
+    font-family: "Mulish", sans-serif;
+    color: var(--letra-gris);
+  }
+  .title_menu_opciones-1 h3 {
+    font-family: "Mulish", sans-serif;
+  }
+  .title_menu_opciones-1 {
+    font-size: 3vh;
+    position: absolute;
+    font-family: "Mulish", sans-serif;
+    margin-top: 1vh;
+    margin-bottom: 10vh;
+    width: 20%;
+    color: var(--letra-negra);
+    padding-left: 20vh;
+    padding-right: 20vh;
+  }
+  .list_opciones-1 {
+    padding-left: 6vh;
+    font-size: 2vh;
+    text-decoration: none;
+    font-family: "Mulish", sans-serif;
+    color: var(--letra-gris);
+  }
+  .list_opciones-1 :hover {
+    color: var(--letra-gris);
+    font-size: 2.4vh;
+  }
+  .list_opciones :hover {
+    color: var(--letra-gris);
+    font-size: 3vh;
+  }
+  .title_menu_opciones {
+    font-size: 3vh;
+    color: var(--letra-negra);
+    font-family: "Mulish", sans-serif;
+  }
+  .cuadrados_colores {
+    height: 10px;
+    width: 10px;
+    margin-right: 5vh;
+    background: blueviolet;
+    display: inline-block;
+  }
+}
 /*# sourceMappingURL=practica.css.map */
